--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,16 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".SavedMatchesActivity"></activity>
-        <activity android:name=".ShowMatchesActivity" />
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".SavedMatchesActivity"
+            android:parentActivityName=".MainActivity"
+            android:label="Saved Matches"/>
+        <activity
+            android:name=".ShowMatchesActivity"
+            android:parentActivityName=".MainActivity"
+            android:label="Matches for today"/>
+        <activity android:name=".MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
